@@ -3232,7 +3232,7 @@ abstract class CommonObject
 			if ($this->element == 'facture_fourn' || $this->element == 'invoice_supplier') $fieldtva = 'total_tva';
 			if ($this->element == 'propal')                                                $fieldttc = 'total';
 			if ($this->element == 'expensereport')                                         $fieldtva = 'total_tva';
-			if ($this->element == 'supplier_proposal')                                     $fieldttc = 'total';
+			if ($this->element == 'supplier_proposal')                                     $fieldtva = 'total_tva';
 
 			if (empty($nodatabaseupdate))
 			{
