@@ -37,10 +37,10 @@ CREATE TABLE llx_supplier_proposal (
   remise_absolue double DEFAULT 0,
   remise double DEFAULT 0,
   total_ht double(24,8) DEFAULT 0,
-  tva double(24,8) DEFAULT 0,
+  total_tva double(24,8) DEFAULT 0,
   localtax1 double(24,8) DEFAULT 0,
   localtax2 double(24,8) DEFAULT 0,
-  total double(24,8) DEFAULT 0,
+  total_ttc double(24,8) DEFAULT 0,
   fk_account integer DEFAULT NULL,
   fk_currency varchar(3) DEFAULT NULL,
   fk_cond_reglement integer DEFAULT NULL,
