@@ -19,7 +19,8 @@ WARNING:
 Following changes may create regressions for some external modules, but were necessary to make Dolibarr better:
 * The ICS value for direct debit or credit transfer is now store on each bank account instead of into the global setup.
 * API /setup/shipment_methods has been replaced with API /setup/shipping_methods
-
+* Field tva move to total_tva in llx_supplier_proposal
+* Field total move to total_ttc in llx_supplier_proposal
 
 
 ***** ChangeLog for 13.0.1 compared to 13.0.0 *****
